kustomize/app/nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apps-nodejs
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: apps-nodejs
